# bytecode-sym

./: .gitignore  .gitmodules  LICENSE  README.md
cpython/: README.md
cpython/examples/: example_01.py
cpython/src/: CMakeLists.txt  bytecode.c  bytecode.h  main.c  opcode.h  vm.c  vm.h
cpython/src/test/: test_parse_bytecode.c  test_stp.c  test_vm.c
